# open-taffeta

./: .env_PROD  .env_TEST  .env_dev  .env_prod  .env_test  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.txt  Cargo.toml  Dockerfile  Dockerfile.x86-64  README.armv6.md  README.md  Rocket.toml  build-raspi.sh  docker-build.sh  docker-compose.yml  docker-run.sh  rustfmt.toml  travis.sh
certs/: localhost-key.pem  localhost.pem
docker/: Dockerfile  build.sh  docker-compose.yml
docker-raspi/: Dockerfile-raspi
migrations/2018-06-03-092531_create_users/: up.sql
migrations/2018-06-03-132600_create_users/: up.sql
migrations/2018-08-10-151755_create_doors/: down.sql  up.sql
migrations/2019-05-03-153648_create_userauth/: down.sql  up.sql
migrations/2019-05-04-140711_users_change_active_fld/: down.sql  up.sql
migrations/2019-05-30-233258_create_roles/: up.sql
scripts/: alter-table.sql  create-admin.sh  open-taffeta.service  settings
src/: auth.rs  config.rs  crypto.rs  db.rs  lib.rs  main.rs  models.rs  responses.rs  schema.rs  utils.rs
src/auth/: admin.rs  cookie.rs  mod.rs  token.rs  user.rs
src/routes/: admin.rs  all.rs  doors.rs  mod.rs  users.rs
src/serializers/: doors.rs  mod.rs  user.rs  users.rs
static/: login.html
templates/: admin_users_list.html.tera
tests/: basic.rs  test_admin.rs  test_doors.rs  test_users.rs
tests/common/: dbstate.rs  mod.rs
tests/testsuite/: lib.rs  test_admin.rs  test_doors.rs  test_users.rs
tests/testsuite/cratetests/: Cargo.toml  lib.rs
tests/testsuite/cratetests/common/: mod.rs
