[package]
authors = ["apiraino <apiraino@users.noreply.github.com>", "kkom <kkom@users.noreply.github.com>"]
name = "open-taffeta"
version = "0.2.0"
edition = "2018"
description = "Raspberry Pi-hosted website controlling access to a building."
readme = "README"
license = "MIT"

[lib]
name = "open_taffeta_lib"
path = "src/lib.rs"

[[bin]]
name = "open_taffeta_bin"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.4.0", features = ["tls"] }
rocket_cors = "0.4.0"

# validation for input struct deserialized
validator = "0.8.0"
validator_derive = "0.8.0"

rust-crypto = "0.2.36"
jsonwebtoken = "5.0.1"
slug = "0.1.4"

diesel = { version = "1.4.1", features = ["chrono", "sqlite", "r2d2"] }

serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"

env_logger = "0.6.0"
log = "0.4.6"
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9.10"
rand = "0.6.5"
audit = "0.1.1"
openssl = "0.10.16"
sha1 = "0.6.0"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]

[dependencies.libsqlite3-sys]
version = "0.12.0"
features = ["bundled"]

# https://vfoley.xyz/rust-compile-speed-tips/
[profile.dev]
lto=false

[package.metadata.deb]
maintainer = "apiraino <apiraino@users.noreply.github.com>"
copyright = "2018-2019, apiraino <apiraino@users.noreply.github.com>"
# license-file = ["LICENSE", "4"]
extended-description = "Raspberry Pi-hosted website controlling access to a building."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/open_taffeta_bin", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/open_taffeta/README", "644"],
    #[".env_dev", "usr/share/doc/open_taffeta/.env_dev", "644"],
    #[".env_prod", "usr/share/doc/open_taffeta/.env_prod", "644"],
    #["migrations/*/*", "migrations/", "755"],
    #["certs/*", "/root/certs/", "755"],
]
