[package]
name = "cratetests"
version = "0.1.0"
authors = ["apiraino <apiraino@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
open-taffeta = { path = "../../.." }
diesel = { version = "1.4.2", features = ["chrono", "sqlite", "r2d2"] }
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
chrono = { version = "0.4.6", features = ["serde"] }
reqwest = "0.9.18"
rand = "0.6.5"

# https://vfoley.xyz/rust-compile-speed-tips/#avoid-lto
[profile.dev]
lto=false
